project('tek','cpp', default_options : ['cpp_std=c++23','warning_level=3'])

threads = dependency('threads')
boost = dependency('boost')
fmt = dependency('fmt', modules : ['fmt::fmt-header-only'])
tbb = dependency('TBB', modules : ['TBB::tbb'])
folly = dependency('folly', modules : ['Folly::folly'])
ring_buffers = declare_dependency(include_directories : 'src/RingBuffers/include')
rb_test_deps = declare_dependency(dependencies : [threads, fmt, boost, ring_buffers, tbb, folly]) 
executable('fq_test_1r_1w', 'src/rb_tests/fq_test_1r_1w.cpp' , dependencies : rb_test_deps)
executable('fq_test_mr_mw', 'src/rb_tests/fq_test_mr_mw.cpp' , dependencies : rb_test_deps)
executable('fq_test_call_only', 'src/rb_tests/fq_test_call_only.cpp' , dependencies : rb_test_deps)
executable('fq_test_call_and_pop', 'src/rb_tests/fq_test_call_and_pop.cpp' , dependencies : rb_test_deps)
executable('oq_test_1r_1w', 'src/rb_tests/oq_test_1r_1w.cpp' , dependencies : rb_test_deps)
executable('oq_test_nr_1w', 'src/rb_tests/oq_test_nr_1w.cpp' , dependencies : rb_test_deps)
